# CE2

./: CMakeLists.txt  build.sh
engine/core/: runtime.c  runtime.h
engine/graphics/: screen.c  screen.h
engine/platform/: terminal.h  time.h
engine/platform/unix/: terminal.c  time.c
engine/platform/win/: time.c
game/: game.c
